# minecraftlm

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  run.sh
backend/: .env.example  README.md  pyproject.toml  pytest.ini  test_arcpoint.py  test_litellm_arcpoint.py
backend/app/: config.py  errors.py  main.py
backend/app/agent/: __init__.py  block_parser.py  harness.py
backend/app/agent/llms/: __init__.py  anthropic.py  base.py  gemini.py  lite.py  oai.py
backend/app/agent/minecraft/: __init__.py  assets.py  scaffold.py  sdk.py
backend/app/agent/minecraft_sdk/: __init__.py  assets.py  scaffold.py  sdk.py
backend/app/agent/prompts/: system_prompt.txt
backend/app/agent/tools/: base.py  complete_task.py  edit_code.py  read_code.py  registry.py
backend/app/api/: __init__.py  chat.py  models_api.py  session.py
backend/app/dependencies/: __init__.py  dependencies.py  server_state.py
backend/app/models/: __init__.py  conversation.py
backend/app/services/: code_runner.py  event_buffer.py  executor.py  file_ops.py  gemini.py  llm.py  session.py  validator.py
backend/scripts/: test_multi_refresh.py  test_refresh_simulation.py  test_refresh_with_stream.py  test_stream.py  test_stream_resume.py  test_stream_resume_comprehensive.py
backend/tests/: conftest.py  test_block_parser.py  test_event_buffer.py  test_gemini.py  test_harness.py  test_integration_e2e.py  test_llm_message_formats.py  test_registry.py  test_session.py  test_terrain_water.py  test_tools.py  test_validator.py
(+208 files in other folders)
